Wand part tooltips
Displays wand cap discount and rod/staff capacity

--- a/src/main/resources/assets/thaumicutilities/lang/en_US.lang
+++ b/src/main/resources/assets/thaumicutilities/lang/en_US.lang
@@ -14,3 +14,5 @@ util.warp.sticky=Sticky warp
 util.warp.temp=Temporary warp
 util.shift=Press SHIFT for details
 util.noHitGuardian=§oYou cannot yet comprehend how to damage these creatures
+
+tc.viscapacity=Vis capacity
